# render-modes

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  clippy.yml
common/lr/: Cargo.toml  README.md
common/lr/src/: lib.rs
headphones/: Cargo.toml  README.md
headphones/src/: distance.rs  lib.rs
headphones/src/hrtf/: mod.rs  no_hrtf.rs  sofa.rs
headphones/src/hrtf/hrtfs/: HRIR_CIRC360RM.sofa  HRIR_CIRC360_NF025.sofa  HRIR_CIRC360_NF050.sofa  HRIR_CIRC360_NF075.sofa  HRIR_CIRC360_NF100.sofa  HRIR_CIRC360_NF150.sofa  HRIR_L2702.sofa  HRIR_L2702_NF075.sofa  HRIR_L2702_NF100.sofa  Subject1_HRIRs.sofa  Subject1_RIRs.sofa
headphones/src/hrtf/sofa/: HRIR_CIRC360.sofa  HRIR_CIRC360RM.sofa  HRIR_CIRC360_NF150.sofa  HRIR_FULL2DEG.sofa  HRIR_L2354.sofa  HRIR_L2702_NF050.sofa  HRIR_L2702_NF150.sofa  Subject1_BIRs.sofa  Subject1_HRIRs_dfeq.sofa  Subject1_HRIRs_lfc.sofa  Subject1_RIRs.sofa
mono/: Cargo.toml  README.md
mono/src/: lib.rs
stereo/: Cargo.toml  README.md
stereo/src/: lib.rs  pan_law.rs
