[package]
name = "xpans_common_lr"
version = "0.1.1"
edition = "2024"
description = "Shared traits and functions between Stereo and Headphones rendering modes in the xpans Ecosystem"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xpans-audio/render-modes.git"
authors = ["Ben Seigler"]

[dependencies]
num = "0.4.3"
